--- a/scss/components/podcast/podcast.scss
+++ b/scss/components/podcast/podcast.scss
@@ -25,12 +25,17 @@
     flex-wrap: wrap;
     gap: 1.5rem;
     width: 70%;
+
    
     &__li{
         position: relative;
         display: flex;
         width: 22rem;
         height: 20rem;
+        &:hover{
+            transform: scale(1.1);
+            transition: 0.4s all;
+        }
         &--titel{
             position: absolute;
             bottom: 0;
