--- a/scss/components/podcast/podcast.scss
+++ b/scss/components/podcast/podcast.scss
@@ -1,17 +1,15 @@
+@use "../../abstracts/colors";
+@use "../../abstracts/mixins";
 .collection{
-    display: flex;
     display: grid;
     grid-template-columns: 50% 50%;
     padding: 4rem;
     height: 80vh;
+    
 
     &__section{
         display: flex;
-        &--left{
-            flex-direction: column;
-            justify-content: space-between;
-        }
-        &--right{
+        &--left, &--right{
             flex-direction: column;
             justify-content: space-between;
         }
@@ -19,9 +17,7 @@
 }
 
 .leftul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include mixins.flexCenter;
     flex-wrap: wrap;
     gap: 1.5rem;
     width: 70%;
@@ -32,7 +28,7 @@
         display: flex;
         width: 22rem;
         height: 20rem;
-        color: white;
+        color: map-get(colors.$baseColors, "white");
         
         &:hover{
             transform: scale(1.1);
@@ -63,9 +59,7 @@
 }
 
 .rightul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include mixins.flexCenter;
     flex-wrap: wrap;
     padding: 0rem 2rem;
     width: 80%;
@@ -84,13 +78,13 @@
             left: 1%;
             bottom: 2.5%;
             position: absolute;
-            color: white;
+            color: map-get(colors.$baseColors, "white");
         }
         &--datum{
             top: 1%;
             right: 1%;
             position: absolute;
-            color: white;
+            color: map-get(colors.$baseColors, "white");
         }
         &--img{
             height: 21rem;
@@ -107,7 +101,7 @@
         }
         &--source{
             text-decoration: none;
-            color: #000000;
+            color: map-get(colors.$baseColors, "black");
 
             &:hover{
                 cursor: pointer;
