--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -2,4 +2,10 @@ $baseColors: (
     "white" : #FFFFFF,
     "grey": #ECECEC,
     "black": #000000,
+);
+$colorPalette: (
+    "yellow-light": #F7FD04,
+    "yellow-medium": #F9B208,
+    "orange-medium": #F98404,
+    "orange-dark": #FC5404,
 )
