--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,7 +1,9 @@
+@use "./abstracts/colors";
 html{
     font-family: 'Ubuntu', sans-serif;
 }
 
 body{
     min-height: 100vh;
+    background: linear-gradient(0.35turn, map-get(colors.$colorPalette, "yellow-light") 20%,map-get(colors.$colorPalette, "yellow-medium") 45%, map-get(colors.$colorPalette, "orange-medium") 70%, map-get(colors.$colorPalette, "orange-dark") 95%);
 }
